--- a/app/globals.css
+++ b/app/globals.css
@@ -147,7 +147,6 @@ body {
 .styled-table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #ddd;
   margin-top: 20px;
 }
 
@@ -155,23 +154,26 @@ body {
 .styled-table td {
   padding: 8px 12px;
   text-align: left;
+  color: white;
 }
 
 .styled-table th {
-  background-color: #f2f2f2;
+  background-color: #333;
   font-weight: bold;
 }
 .styled-table-tow {
   width: 50pc;
   border-collapse: collapse;
-  border: 1px solid #ddd;
+  border: 1px solid #ffffff;
   margin-top: 20px;
+  color: white;
 }
 
 .styled-table-tow th,
 .styled-table-tow td {
   padding: 8px 12px;
   text-align: left;
+  color: white;
 }
 
 .styled-table-tow th {
