--- a/app/globals.css
+++ b/app/globals.css
@@ -26,8 +26,9 @@ html {
 }
 
 body {
+  overflow: hidden;
   font-family: "Kanit", sans-serif;
-  color: rgb(var(--foreground-rgb));
+  color: #000;
   background: linear-gradient(
       to bottom,
       transparent,
@@ -126,19 +127,19 @@ body {
 }
 
 .mi-animacion {
-  animation: aumentarYDesvanecer 1s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: aumentarYDesvanecer 2s ease-in-out forwards; /* 5s es la duración de la animación */
 }
 .miAnimacion2 {
-  animation: mapaDos 1s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaDos 2s ease-in-out forwards; /* 5s es la duración de la animación */
 }
 .miAnimacion3 {
-  animation: mapaTres 1s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaTres 2s ease-in-out forwards; /* 5s es la duración de la animación */
 }
 .miAnimacion4 {
-  animation: mapaCuatro 1s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaCuatro 2s ease-in-out forwards; /* 5s es la duración de la animación */
 }
 .miAnimacion5 {
-  animation: mapaFive 1s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaFive 2s ease-in-out forwards; /* 5s es la duración de la animación */
 }
 
 .mp {
@@ -275,6 +276,81 @@ body {
   position: absolute;
   bottom: -48px;
   left: calc(50% - 25px);
+}
+.bocadillo-cuadrado1 {
+  position: relative;
+  min-height: 200px;
+  width: 300px;
+  background: white;
+  box-shadow: 1px 12px 33px rgba(0, 0, 0, 0.5);
+  border: 2px solid black;
+  border-radius: 8px;
+  color: black;
+  padding: 1pc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bocadillo-cuadrado1:before {
+  border: 25px solid white;
+  content: "";
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  position: absolute;
+  bottom: 8px;
+  left: calc(-15%);
+  transform: rotate(90deg);
+}
+.bocadillo-cuadrado2 {
+  position: relative;
+  min-height: 90px;
+  width: 300px;
+  background: white;
+  box-shadow: 1px 12px 33px rgba(0, 0, 0, 0.5);
+  border: 2px solid black;
+  border-radius: 8px;
+  color: black;
+  padding: 1pc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bocadillo-cuadrado2:before {
+  border: 25px solid white;
+  content: "";
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  position: absolute;
+  bottom: 8px;
+  left: calc(100%);
+  transform: rotate(270deg);
+}
+.bocadillo-cuadrado3 {
+  position: relative;
+  min-height: 90px;
+  width: 300px;
+  background: white;
+  box-shadow: 1px 12px 33px rgba(0, 0, 0, 0.5);
+  border: 2px solid black;
+  border-radius: 8px;
+  color: black;
+  padding: 1pc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bocadillo-cuadrado3:before {
+  border: 25px solid white;
+  content: "";
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  position: absolute;
+  bottom: 8px;
+  left: calc(-15%);
+  transform: rotate(90deg);
 }
 
 .lds-roller {
