--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,22 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;300;400;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
+
 * {
-  cursor: pointer;
   outline: none;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -29,16 +32,33 @@ html {
 }
 
 body {
-  /* overflow: hidden; */
+  overflow: hidden;
   font-family: "Kanit", sans-serif;
-  color: #000;
-  background: linear-gradient(
-      to bottom,
+  color: #000000;
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+
+.Nene {
+  font-family: 'Love Ya Like A Sister', cursive;
+  padding: 0;
+  height: 3pc;
+  width: 3pc;
+  font-size: 2pc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reiniciar {
+  transition: all 0.2s ease-in-out;
+}
+
+.reiniciar:hover {
+  transform: scale(1.02);
+}
+
 .mess {
   background-image: url("/img/mensaje.svg");
 }
@@ -48,6 +68,7 @@ body {
     transform: translateX(0);
     opacity: 1;
   }
+
   100% {
     transform: translateX(-7pc);
     opacity: 0;
@@ -55,13 +76,16 @@ body {
 }
 
 .fading-of-elements-right {
-  animation: slideAndFade 0.5s ease-in-out forwards; /* Ajusta la duración según tus preferencias */
+  animation: slideAndFade 0.5s ease-in-out forwards;
+  /* Ajusta la duración según tus preferencias */
 }
+
 @keyframes slideAndFade2 {
   0% {
     transform: translateX(0);
     opacity: 1;
   }
+
   100% {
     transform: translateX(-7pc);
     opacity: 0;
@@ -69,7 +93,8 @@ body {
 }
 
 .fading-of-elements-top {
-  animation: slideAndFade2 0.5s ease-in-out forwards; /* Ajusta la duración según tus preferencias */
+  animation: slideAndFade2 0.5s ease-in-out forwards;
+  /* Ajusta la duración según tus preferencias */
 }
 
 /* Estilos normales para el SVG */
@@ -83,8 +108,10 @@ body {
 
 /* Estilos de hover para el SVG */
 .svg-container:hover {
-  fill: blue !important; /* Cambia el color de relleno en hover */
-  transform: scale(1.2); /* Cambia el tamaño en hover */
+  fill: blue !important;
+  /* Cambia el color de relleno en hover */
+  transform: scale(1.2);
+  /* Cambia el tamaño en hover */
   /* Otros estilos de hover que desees aplicar */
 }
 
@@ -92,62 +119,81 @@ body {
   0% {
     width: 41pc;
   }
+
   100% {
     width: 78pc;
   }
 }
+
 @keyframes mapaDos {
   0% {
     width: 41pc;
   }
+
   100% {
     width: 78pc;
   }
 }
+
 @keyframes mapaTres {
   0% {
     width: 41pc;
   }
+
   100% {
     width: 78pc;
   }
 }
+
 @keyframes mapaCuatro {
   0% {
     width: 41pc;
   }
+
   100% {
     width: 78pc;
   }
 }
+
 @keyframes mapaFive {
   0% {
     width: 41pc;
   }
+
   100% {
     width: 78pc;
   }
 }
 
 .mi-animacion {
-  animation: aumentarYDesvanecer 2s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: aumentarYDesvanecer 2s ease-in-out forwards;
+  /* 5s es la duración de la animación */
 }
+
 .miAnimacion2 {
-  animation: mapaDos 2s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaDos 2s ease-in-out forwards;
+  /* 5s es la duración de la animación */
 }
+
 .miAnimacion3 {
-  animation: mapaTres 2s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaTres 2s ease-in-out forwards;
+  /* 5s es la duración de la animación */
 }
+
 .miAnimacion4 {
-  animation: mapaCuatro 2s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaCuatro 2s ease-in-out forwards;
+  /* 5s es la duración de la animación */
 }
+
 .miAnimacion5 {
-  animation: mapaFive 2s ease-in-out forwards; /* 5s es la duración de la animación */
+  animation: mapaFive 2s ease-in-out forwards;
+  /* 5s es la duración de la animación */
 }
 
 .mp {
   transition: all 0.5s ease-in-out forwards;
 }
+
 .styled-table {
   width: 100%;
   border-collapse: collapse;
@@ -160,6 +206,7 @@ body {
   color: white;
   text-align: center;
 }
+
 .styled-table td {
   padding: 8px 12px;
   text-align: left;
@@ -171,6 +218,7 @@ body {
   background-color: #333;
   font-weight: bold;
 }
+
 .styled-table-tow {
   width: 50pc;
   border-collapse: collapse;
@@ -199,6 +247,7 @@ body {
   display: flex;
   align-items: center;
 }
+
 .contaAni {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -220,16 +269,20 @@ body {
 }
 
 .blu {
-  backdrop-filter: blur(40px); /* Controla la cantidad de desenfoque */
+  backdrop-filter: blur(40px);
+  /* Controla la cantidad de desenfoque */
 }
+
 @keyframes blurAnimation {
   0% {
     backdrop-filter: blur(0px);
   }
+
   100% {
     backdrop-filter: blur(8px);
   }
 }
+
 .blU {
   backdrop-filter: blur(0px);
   /* Otras propiedades de estilo aquí */
@@ -240,29 +293,40 @@ body {
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 }
+
 .fondo3 {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/9.png?alt=media&token=118629a5-7503-449d-a803-ae9583e893fb");
 }
+
 .fondo4 {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/11.png?alt=media&token=4f76245c-8c5a-422f-abd6-36081942e294");
   background-position: bottom center;
 }
+
 .fondo5 {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/8.png?alt=media&token=e213c385-d239-4ec4-8774-dbad992d2600");
   background-position: bottom center;
 }
+
 .fondo6 {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/14.png?alt=media&token=a5892626-d9a2-4445-a9d9-80c2842257b8");
   background-position: bottom center;
 }
+
 .fondo7 {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/selva.png?alt=media&token=032acb0a-3031-49e1-b146-c650276487a0");
   background-position: bottom;
 }
+
 .fondo8 {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/selva.png?alt=media&token=032acb0a-3031-49e1-b146-c650276487a0");
   background-position: bottom;
   background-size: cover;
+}
+
+.fondoBlu {
+  backdrop-filter: blur(40px);
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/8.png?alt=media&token=e213c385-d239-4ec4-8774-dbad992d2600");
 }
 
 .bocadillo-cuadrado {
@@ -277,6 +341,7 @@ body {
   padding: 1pc;
   transition: all 0.2s ease-in-out;
 }
+
 .bocadillo-cuadrado:before {
   border: 25px solid white;
   content: "";
@@ -287,6 +352,7 @@ body {
   bottom: -48px;
   left: calc(50% - 25px);
 }
+
 .bocadillo-cuadrado1 {
   position: relative;
   min-height: 200px;
@@ -302,6 +368,7 @@ body {
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
+
 .bocadillo-cuadrado1:before {
   border: 25px solid white;
   content: "";
@@ -313,6 +380,7 @@ body {
   left: calc(-15%);
   transform: rotate(90deg);
 }
+
 .bocadillo-cuadrado2 {
   position: relative;
   min-height: 90px;
@@ -328,6 +396,7 @@ body {
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
+
 .bocadillo-cuadrado2:before {
   border: 25px solid white;
   content: "";
@@ -339,6 +408,7 @@ body {
   left: calc(100%);
   transform: rotate(270deg);
 }
+
 .bocadillo-cuadrado3 {
   position: relative;
   min-height: 90px;
@@ -354,6 +424,7 @@ body {
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
+
 .bocadillo-cuadrado3:before {
   border: 25px solid white;
   content: "";
@@ -365,31 +436,39 @@ body {
   left: calc(-15%);
   transform: rotate(90deg);
 }
+
 .flecha {
   transition: all 0.2s ease-in-out;
   animation: hello 2s infinite;
 }
+
 @keyframes hello {
   0% {
     transform: scale(1);
   }
+
   25% {
     transform: scale(1.1);
   }
+
   50% {
     transform: scale(1);
   }
+
   75% {
     transform: scale(1.1);
   }
+
   100% {
     transform: scale(1);
   }
 }
+
 .flecha:hover {
   transform: scale(1.1);
   animation-play-state: paused;
 }
+
 .bocadillo-cuadrado4 {
   position: relative;
   min-height: 90px;
@@ -405,6 +484,7 @@ body {
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
+
 .bocadillo-cuadrado5 {
   position: relative;
   min-height: 90px;
@@ -420,6 +500,7 @@ body {
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
+
 .bocadillo-cuadrado4:before {
   border: 25px solid white;
   content: "";
@@ -431,9 +512,11 @@ body {
   left: calc(100%);
   transform: rotate(270deg);
 }
+
 .D3 {
   transition: all 0.3s ease-in-out;
 }
+
 .bocadillo-cuadrado6 {
   position: relative;
   min-height: 90px;
@@ -449,6 +532,7 @@ body {
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
+
 .bocadillo-cuadrado6:before {
   border: 25px solid white;
   content: "";
@@ -460,9 +544,11 @@ body {
   right: calc(-15%);
   transform: rotate(268deg);
 }
+
 .zon {
   transition: all 0.2s ease-in-out;
 }
+
 .zon:hover,
 .bocadillo-cuadrado6:hover,
 .bocadillo-cuadrado5:hover,
@@ -474,29 +560,49 @@ body {
 .D3:hover {
   transform: scale(1.05);
 }
+
 .noSelect {
   user-select: none;
-  -webkit-user-select: none; /* Para navegadores basados en WebKit como Safari */
-  -moz-user-select: none; /* Para navegadores basados en Gecko como Firefox */
-  -ms-user-select: none; /* Para Internet Explorer/Edge */
+  -webkit-user-select: none;
+  /* Para navegadores basados en WebKit como Safari */
+  -moz-user-select: none;
+  /* Para navegadores basados en Gecko como Firefox */
+  -ms-user-select: none;
+  /* Para Internet Explorer/Edge */
 }
+
 .alegria:hover {
   content: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/documentos%2FCarasColor%2F1.png?alt=media&token=88ce0385-2b21-41a3-8998-59da5b7b8b38");
 }
+
 .Enojo:hover {
   content: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/documentos%2FCarasColor%2F2.png?alt=media&token=7b930cf5-4568-4378-b016-75a904b7ed4b");
 }
+
 .Tristeza:hover {
   content: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/documentos%2FCarasColor%2F3.png?alt=media&token=e6dc324f-a409-4203-81ad-e880f7d7122f");
 }
+
 .Miedo:hover {
   content: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/documentos%2FCarasColor%2F4.png?alt=media&token=6a39090c-ee37-49e8-b331-5c12722c2a78");
 }
+
 .Sorpresa:hover {
   content: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/documentos%2FCarasColor%2F5.png?alt=media&token=47bdd4bf-eb63-4386-b2b4-6cd8e1c2e85d");
 }
+
 .Desagrado:hover {
   content: url("https://firebasestorage.googleapis.com/v0/b/fb-picporter.appspot.com/o/documentos%2FCarasColor%2F6.png?alt=media&token=76e98c7b-ae0a-491f-99ed-7643698ea6b4");
+}
+
+.sorpresa {
+  height: 20pc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 40pc;
+  position: relative;
 }
 
 .lds-roller {
@@ -505,10 +611,12 @@ body {
   width: 80px;
   height: 80px;
 }
+
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   transform-origin: 40px 40px;
 }
+
 .lds-roller div:after {
   content: " ";
   display: block;
@@ -519,66 +627,84 @@ body {
   background: #fff;
   margin: -4px 0 0 -4px;
 }
+
 .lds-roller div:nth-child(1) {
   animation-delay: -0.036s;
 }
+
 .lds-roller div:nth-child(1):after {
   top: 63px;
   left: 63px;
 }
+
 .lds-roller div:nth-child(2) {
   animation-delay: -0.072s;
 }
+
 .lds-roller div:nth-child(2):after {
   top: 68px;
   left: 56px;
 }
+
 .lds-roller div:nth-child(3) {
   animation-delay: -0.108s;
 }
+
 .lds-roller div:nth-child(3):after {
   top: 71px;
   left: 48px;
 }
+
 .lds-roller div:nth-child(4) {
   animation-delay: -0.144s;
 }
+
 .lds-roller div:nth-child(4):after {
   top: 72px;
   left: 40px;
 }
+
 .lds-roller div:nth-child(5) {
   animation-delay: -0.18s;
 }
+
 .lds-roller div:nth-child(5):after {
   top: 71px;
   left: 32px;
 }
+
 .lds-roller div:nth-child(6) {
   animation-delay: -0.216s;
 }
+
 .lds-roller div:nth-child(6):after {
   top: 68px;
   left: 24px;
 }
+
 .lds-roller div:nth-child(7) {
   animation-delay: -0.252s;
 }
+
 .lds-roller div:nth-child(7):after {
   top: 63px;
   left: 17px;
 }
+
 .lds-roller div:nth-child(8) {
   animation-delay: -0.288s;
 }
+
 .lds-roller div:nth-child(8):after {
   top: 56px;
   left: 12px;
 }
+
 @keyframes lds-roller {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
