--- a/components/Styles.css
+++ b/components/Styles.css
@@ -1,4 +1,34 @@
 .containerFaceImages:hover {
   transform: scale(1.05);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(40px);
+}
+
+@keyframes zom {
+  0% {
+    backdrop-filter: blur(0px);
+    background-color: rgba(0, 0, 0, 0);
+  }
+  100% {
+    backdrop-filter: blur(20px);
+    background-color: rgba(0, 0, 0, 0.464);
+  }
+}
+
+@keyframes ver {
+  0% {
+    bottom: -30pc;
+  }
+  100% {
+    bottom: 0pc;
+  }
+}
+
+.Fondo {
+  animation: zom 0.5s forwards 0.3s;
+}
+
+.Show {
+  transition: all 0.6s ease-in-out;
+  animation: ver 0.2s forwards 0.3s;
 }
